tests/spec/pass/slice_basic.aja
nums = [10, 20, 30, 40]
mid = nums[1:3]
prefix = nums[:2]
suffix = nums[2:]
all_nums = nums[:]

print(mid)
print(prefix)
print(suffix)
print(all_nums)
print(nums[2:2])

mid[0] = 99
print(mid)
print(nums)

name = "Ajasendiri"
print(name[0:4])
print(name[:4])
print(name[4:])
print(name[:])
