tests/spec/fail/list_insert_index_oob.aja
nums = [1]
nums.insert(-1, 2)
